Finished set up of project and added methods

--- a/ChinookMusic/WebApp/Pages/Shared/_Layout.cshtml
+++ b/ChinookMusic/WebApp/Pages/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
    
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WebApp.styles.css" asp-append-version="true" />
+
+    @RenderSection("CustomCSS", required: false)
 </head>
 <body>
     <header>
@@ -36,6 +38,7 @@
                     <span>Samples</span>
                     <ul>
                         <li><a asp-area="" asp-page="/SamplePages/Index.cshtml">Default Sample Pages Home</a></li>
+                         <li><a asp-area="" asp-page="/SamplePages/Controls.cshtml">Sample Pages controls </a></li>
                     </ul>
                 </li>
                 <li >
